--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "framer-motion": "^10.0.1",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "resize-observer-polyfill": "^1.5.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
